--- a/Mailmind/requirements.txt
+++ b/Mailmind/requirements.txt
@@ -1,13 +1,31 @@
 asgiref==3.8.1
+azure-cognitiveservices-vision-computervision==0.9.1
+azure-common==1.1.28
+azure-core==1.32.0
+azure-identity==1.19.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+cryptography==44.0.0
 Django==5.1.4
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 idna==3.10
+isodate==0.7.2
+msal==1.31.1
+msal-extensions==1.2.0
+msrest==0.7.1
+oauthlib==3.2.2
 pillow==11.0.0
+portalocker==2.10.1
+pycparser==2.22
+PyJWT==2.10.1
 python-dotenv==1.0.1
 requests==2.32.3
+requests-oauthlib==2.0.0
+six==1.17.0
 soupsieve==2.6
 sqlparse==0.5.3
+typing_extensions==4.12.2
 urllib3==2.2.3
